--- a/templates/technician_form.html
+++ b/templates/technician_form.html
@@ -38,6 +38,11 @@
                         <label for="{{ form.skills.id_for_label }}" class="block text-sm font-medium text-gray-700">Skills</label>
                         {{ form.skills }}
                     </div>
+                    <div class="space-y-1">
+                        <label for="{{ form.contact.id_for_label }}" class="block text-sm font-medium text-gray-700">contact</label>
+                        {{ form.contact }}
+                        
+                    </div>
                 </div>
 
                 <button type="submit" class="w-full sm:w-auto px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
